Timeseries example (#145)
* example route and plan models fix

* update timeseries in yaml

* fix yaml

* fix typo

* change return type to money

* add plan validation payload
